2003-01-12  Bruno Haible  <bruno@clisp.org>

	* localcharset.h: New file.
	* localcharset.c: Include it.
	* Makefile.am (libgettextlib_la_SOURCES): Add localcharset.h.

2003-01-12  Bruno Haible  <bruno@clisp.org>

	* alloca_.h: New file, from gnulib.
	* liballoca.h: Remove file.
	* Makefile.am: Add snippet from gnulib module alloca.
	(LIBADD_SOURCE): Remove liballoca.h.
	* javacomp.c: Include alloca.h instead of liballoca.h.
	* javaexec.c: Likewise.
	* setenv.c: Likewise.

2003-01-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: Make use of += for variables.
	(install-exec-local): Avoid creating $(libdir) if it would be empty.

2003-01-12  Bruno Haible  <bruno@clisp.org>

	* linebreak.c (iconv_string_keeping_offsets): Add an assertion, to
	protect against Solaris 2.9 iconv() bug.

2003-01-10  Bruno Haible  <bruno@clisp.org>

	* linebreak.c (mbs_possible_linebreaks, mbs_width_linebreaks):
	Work around Solaris 2.9 iconv() bug.

2003-01-08  Bruno Haible  <bruno@clisp.org>

	* safe-read.h: Update from current gnulib version.
	* safe-read.c: Update from current gnulib version.
	* safe-write.h: Update from current gnulib version.
	* safe-write.c: Update from current gnulib version.
	* full-write.h: Update from current gnulib version.
	* full-write.c: Update from current gnulib version.

2002-12-16  Bruno Haible  <bruno@clisp.org>

	* copy-file.c: Include <sys/utime.h> if <utime.h> doesn't exist.
	Needed for mingw32.
	Reported by Steven Edwards <Steven_Ed4153@yahoo.com>.

2002-11-22  Bruno Haible  <bruno@clisp.org>

	* safe-write.h: New file, from current gnulib version.
	* safe-write.c: New file, from current gnulib version.
	* full-write.h: Update from current gnulib version.
	* full-write.c: Update from current gnulib version.
	* copy-file.c (copy_file): Change test of full_write return value.
	* Makefile.am (libgettextlib_la_SOURCES): Add safe-write.h,
	safe-write.c.

	* safe-read.h: Update from current gnulib version.